--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
       env: 
         zip: ${{ secrets.zip }}
       run: |
+        sudo apt-get update
+        sudo apt-get install -y unzip
         touch db-config.sqlite
         unzip -P $zip -o config.zip 
         rm -f  config.zip
