尝试修复解压问题

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
       env: 
         zip: ${{ secrets.zip }}
       run: |
-        touch db-config.sqlite
-        unzip -P $zip -o config.zip 
+        touch db-config.sqlite        
+        7z x -p $zip config.zip
         rm -f  config.zip
         cp -r  $GITHUB_WORKSPACE/.flexget/ ~/.flexget
         cp -r  config.yml ~/.flexget
